Add a XML sitemap

--- a/snowman.yaml
+++ b/snowman.yaml
@@ -2,3 +2,5 @@ sparql_client:
   endpoint: "https://query.wikidata.org/sparql"
   http_headers: 
     User-Agent: "govdirectory.org build configuration example https://github.com/govdirectory/website/issues"
+metadata:
+  root_url: "https://www.govdirectory.org/"
