🐛 issue templates: label assignment

--- a/.github/ISSUE_TEMPLATE/feature-request.yaml
+++ b/.github/ISSUE_TEMPLATE/feature-request.yaml
@@ -1,6 +1,6 @@
 name: Feature request
 description: File a feature request
-labels: []
+labels: ["enhancement :1st_place_medal:"]
 body:
   - type: markdown
     attributes:
