Add statistics in SVG
Based on idea by Abbe98 in #135

--- a/views.yaml
+++ b/views.yaml
@@ -9,6 +9,11 @@ views:
   - output: "statistics/index.html"
     query: "countries.rq"
     template: "statistics.html"
+    
+  - output: "statistics/statistics.svg"
+    query: "countries.rq"
+    template: "statistics.svg"
+    unsafe: true 
 
   - output: "topics/index.html"
     query: "topics.rq"
