Added Finland to views.yaml

--- a/views.yaml
+++ b/views.yaml
@@ -61,3 +61,6 @@ views:
   - output: "netherlands/{{qid}}/index.html"
     query: "generators/netherlands.rq"
     template: "org.html"
+  - output: "finland/{{qid}}/index.html"
+    query: "generators/finland.rq"
+    template: "org.html"
