--- a/views.yaml
+++ b/views.yaml
@@ -61,3 +61,6 @@ views:
   - output: "netherlands/{{qid}}/index.html"
     query: "generators/netherlands.rq"
     template: "org.html"
+  - output: "new-zealand/{{qid}}/index.html"
+    query: "generators/new-zealand.rq"
+    template: "org.html"
