🇳🇿 Add New Zealand (#186)
Co-authored-by: Albin Larsson <albin.post@gmail.com>

--- a/views.yaml
+++ b/views.yaml
@@ -61,6 +61,9 @@ views:
   - output: "netherlands/{{qid}}/index.html"
     query: "generators/netherlands.rq"
     template: "org.html"
+  - output: "new-zealand/{{qid}}/index.html"
+    query: "generators/new-zealand.rq"
+    template: "org.html"
   - output: "finland/{{qid}}/index.html"
     query: "generators/finland.rq"
     template: "org.html"
