🇺🇦 Add Ukraine to the website.
First batch is ministries and first level units.

Fixes #189.

--- a/views.yaml
+++ b/views.yaml
@@ -67,3 +67,6 @@ views:
   - output: "finland/{{qid}}/index.html"
     query: "generators/finland.rq"
     template: "org.html"
+  - output: "ukraine/{{qid}}/index.html"
+    query: "generators/ukraine.rq"
+    template: "org.html"
