🇮🇳 Add India with ministries, states and union territories

--- a/views.yaml
+++ b/views.yaml
@@ -79,3 +79,6 @@ views:
   - output: "philippines/{{qid}}/index.html"
     query: "generators/philippines.rq"
     template: "org.html"
+  - output: "india/{{qid}}/index.html"
+    query: "generators/india.rq"
+    template: "org.html"
