--- a/views.yaml
+++ b/views.yaml
@@ -91,6 +91,8 @@ views:
   - output: "indonesia/{{qid}}/index.html"
     query: "generators/indonesia.rq"
     template: "org.html"
+  - output: "luxembourg/{{qid}}/index.html"
+    query: "generators/luxembourg.rq"
   - output: "singapore/{{qid}}/index.html"
     query: "generators/singapore.rq"
     template: "org.html"
