map - proof of concept Visualize the countries govdirectory/website#200

--- a/views.yaml
+++ b/views.yaml
@@ -32,6 +32,11 @@ views:
     template: "sitemap.xml"
     unsafe: true
 
+  - output: "map.json"
+    query: "countries.rq"
+    template: "map-data.json"
+    unsafe: true
+
 # orgs
 
   - output: "greenland/{{qid}}/index.html"
