make a proper page for country map

--- a/views.yaml
+++ b/views.yaml
@@ -36,6 +36,8 @@ views:
     query: "countries.rq"
     template: "map-data.json"
     unsafe: true
+  - output: "countries/map/index.html"
+    template: "countries-map.html"
 
 # orgs
 
