:world_map:  Visualize the countries #200 (#226)
* add a map of countries in Govdirectory
* add a button from the list of countries to new map page

Co-authored-by: Ainali <ainali.jan@gmail.com>

--- a/views.yaml
+++ b/views.yaml
@@ -32,6 +32,13 @@ views:
     template: "sitemap.xml"
     unsafe: true
 
+  - output: "map.json"
+    query: "countries.rq"
+    template: "map-data.json"
+    unsafe: true
+  - output: "countries/map/index.html"
+    template: "countries-map.html"
+
 # orgs
 
   - output: "greenland/{{qid}}/index.html"
