✨ Add page for tools
AS a start only the browser extension is listed, but this can serve as a
place for more tools.
I only added the Firefox link, we can figure out later how to add the
Chrome one.
No link to this page yet as I couldn't find a good place to link from.

Fixes #209.

--- a/views.yaml
+++ b/views.yaml
@@ -5,6 +5,8 @@ views:
     template: "landing.html"
   - output: "404.html"
     template: "404.html"
+  - output: "tools.html"
+    template: "tools.html"
 
   - output: "statistics/index.html"
     query: "countries.rq"
