📝 Add Standard for Public Code assessment
Fixes #291

--- a/views.yaml
+++ b/views.yaml
@@ -7,6 +7,8 @@ views:
     template: "404.html"
   - output: "tools/index.html"
     template: "tools.html"
+  - output: "standard-for-public-code/index.html"
+    template: "standard-for-public-code.html"
 
   - output: "statistics/index.html"
     query: "countries.rq"
