Support a structure for countries with multiple gov't levels #212
This allows contributors to split a country into an unlimited(not really tested beyond two) set of levels. The United Kingdom is provided as an example but others should maybe be split as well(Russia?).

--- a/views.yaml
+++ b/views.yaml
@@ -51,9 +51,6 @@ views:
   - output: "sweden/{{qid}}/index.html"
     query: "generators/sweden.rq"
     template: "org.html"
-  - output: "united-kingdom/{{qid}}/index.html"
-    query: "generators/united-kingdom.rq"
-    template: "org.html"
   - output: "denmark/{{qid}}/index.html"
     query: "generators/denmark.rq"
     template: "org.html"
@@ -136,3 +133,9 @@ views:
     query: "generators/morocco.rq"
     template: "org.html"
 
+  - output: "united-kingdom/{{qid}}/index.html"
+    query: "generators/united-kingdom.rq"
+    template: "org.html"
+  - output: "united-kingdom/scotland/{{qid}}/index.html"
+    query: "generators/united-kingdom/scotland.rq"
+    template: "org.html"
