--- a/views.yaml
+++ b/views.yaml
@@ -132,7 +132,7 @@ views:
   - output: "morocco/{{qid}}/index.html"
     query: "generators/morocco.rq"
     template: "org.html"
-    output: "switzerland/{{qid}}/index.html"
+  - output: "switzerland/{{qid}}/index.html"
     query: "generators/switzerland.rq"
     template: "org.html"
 
