--- a/.github/workflows/run-expected-count-script-on-pr.yml
+++ b/.github/workflows/run-expected-count-script-on-pr.yml
@@ -18,17 +18,12 @@ jobs:
       with:
         python-version: '3.x'
 
-    - name: List changed .rq files
-      id: list-files
+    - name: Check changed .rq files
+      id: check-files
       run: |
         # Get a list of .rq files changed in the PR
         CHANGED_FILES=$(git diff --name-only ${{ github.event.before }} ${{ github.sha }} -- '*.rq')
-        echo "files=$CHANGED_FILES" >> $GITHUB_ENV
-
-    - name: Run script on each .rq file
-      if: env.files != ''
-      run: |
-        for file in ${{ env.files }}; do
+        for file in $CHANGED_FILES; do
           echo "Running script on $file"
           python scripts/check-expected-results-count.py --path "$file"
         done
