⚗️  add debugging to see what the diff outputs on GitHub

--- a/.github/workflows/run-expected-count-script-on-pr.yml
+++ b/.github/workflows/run-expected-count-script-on-pr.yml
@@ -21,6 +21,10 @@ jobs:
     - name: Check changed .rq files
       id: check-files
       run: |
+        echo "Debugging CHANGED_FILES..."
+        echo "Comparing commits:"
+        git diff --name-only origin/main...HEAD -- '*.rq'
+
         # Get a list of .rq files changed in the PR
         CHANGED_FILES=$(git diff --name-only origin/main...HEAD -- '*.rq')
         for file in $CHANGED_FILES; do
