👷 Bring in dependency

--- a/.github/workflows/run-expected-count-script-on-pr.yml
+++ b/.github/workflows/run-expected-count-script-on-pr.yml
@@ -23,6 +23,11 @@ jobs:
       with:
         python-version: '3.x'
 
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install requests
+
     - name: Check changed .rq files
       id: check-files
       run: |
