--- a/views.yaml
+++ b/views.yaml
@@ -146,7 +146,10 @@ views:
     template: "org.html"
   - output: "latvia/{{qid}}/index.html"
     query: "generators/latvia.rq"
-    template: "org.html"  
+    template: "org.html"
+  - output: "cuba/{{qid}}/index.html"
+    query: "generators/cuba.rq"
+    template: "org.html" 
 
   - output: "united-kingdom/{{qid}}/index.html"
     query: "generators/united-kingdom.rq"
