--- a/views.yaml
+++ b/views.yaml
@@ -159,6 +159,9 @@ views:
   - output: "cyprus/{{qid}}/index.html"
     query: "generators/cyprus.rq"
     template: "org.html"
+  - output: "japan/{{qid}}/index.html"
+    query: "generators/japan.rq"
+    template: "org.html"
 
   - output: "united-kingdom/{{qid}}/index.html"
     query: "generators/united-kingdom.rq"
