🏴󠁵󠁳󠁮󠁣󠁿 Add North Carolina
Current content includes the general assembly, counties, state agencies, supreme and appellate courts.

--- a/views.yaml
+++ b/views.yaml
@@ -176,3 +176,6 @@ views:
   - output: "united-states/{{qid}}/index.html"
     query: "generators/united-states.rq"
     template: "org.html"
+  - output: "united-states/north-carolina/{{qid}}/index.html"
+    query: "generators/united-states/north-carolina.rq"
+    template: "org.html"
