WIP: Add Fediverse view
This adds the basic layout for the Fediverse view but none of the
queries needed for account listing or statistics.
Adds a link to the view in the footer.
The image is based on:
https://commons.wikimedia.org/wiki/File:Fediverse_logo_proposal.svg
which is CC 0.

--- a/views.yaml
+++ b/views.yaml
@@ -17,6 +17,9 @@ views:
     query: "countries.rq"
     template: "statistics.svg"
     unsafe: true
+  - output: "fediverse/index.html"
+    query: "countries.rq"
+    template: "fediverse.html"
 
   - output: "topics/index.html"
     query: "topics.rq"
